--- a/styles/home.pairwise.module.css
+++ b/styles/home.pairwise.module.css
@@ -37,7 +37,7 @@
 
 }
 .selectors {
-    width: 25%;
+    width: 28%;
     display: flex;
     flex-direction: column;
 }
@@ -80,7 +80,7 @@
 
 .materialInformation {
     /*border: 3px solid #E4E0EE;*/
-    margin: 25px 5px;
+    margin: 0px 5px;
     padding: 20px;
 }
 
